# ai4earth

./: .gitignore  pyproject.toml
src/: generate_dataset.ipynb  lucas_image_chips.ipynb
