[project]
name = "ai4earth"
version = "0.1.0"
description = ""
authors = [
    {name = "lordPachy",email = "francescocalzona03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "tifffile (>=2025.10.16,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
