[project]
name = "ai4earth"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Calzona",email = "francescocalzona03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "lightning (>=2.6.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
