[project]
name = "ai4earth"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Calzona",email = "francescocalzona03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "lightning (>=2.6.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "retry (>=0.9.2,<0.10.0)",
    "leafmap (>=0.57.10,<0.58.0)",
    "earthengine-api (>=1.7.4,<2.0.0)",
    "geemap (>=0.36.6,<0.37.0)",
    "pycrs (>=1.0.2,<2.0.0)",
    "google (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
